--- a/src/index.css
+++ b/src/index.css
@@ -51,5 +51,11 @@ button {
 }
 
 ::-webkit-scrollbar {
-  display: none;
+  width: 6px;
+}
+
+::-webkit-scrollbar-thumb {
+  width: 6px;
+  background-color: #222630;
+  border-radius: 5px;
 }
