--- a/src/index.css
+++ b/src/index.css
@@ -59,3 +59,15 @@ button {
   background-color: #222630;
   border-radius: 5px;
 }
+
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type='number'] {
+  -moz-appearance: textfield;
+}
