--- a/public/charting_library/css/style.css
+++ b/public/charting_library/css/style.css
@@ -1,10 +1,10 @@
 .theme-dark:root {
-	--tv-color-platform-background: #17191D;
+	--tv-color-platform-background: #141416;
 	--tv-color-pane-background: #17191D;
 	--tv-color-pane-background-secondary: rgb(249, 185, 233);
 	--tv-color-toolbar-button-background-hover: #DADADA;
 	--tv-color-toolbar-button-background-secondary-hover: red;
-	--tv-color-toolbar-button-background-expanded: #17191D;
+	--tv-color-toolbar-button-background-expanded: #141416;
 	--tv-color-toolbar-button-text: #DADADA;
 	--tv-color-toolbar-button-text-hover: #000000;
 	--tv-color-toolbar-button-text-active: #DADADA;
