DM sans font imported for trading chart

--- a/public/charting_library/css/style.css
+++ b/public/charting_library/css/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=DM+Sans&family=Rubik&display=swap');
+
 .theme-dark:root {
   --tv-color-platform-background: #141416;
   --tv-color-pane-background: #17191d;
