--- a/public/charting_library/css/style.css
+++ b/public/charting_library/css/style.css
@@ -11,9 +11,10 @@
   --tv-color-toolbar-button-text-hover: #000000;
   --tv-color-toolbar-button-text-active: #dadada;
   --tv-color-toolbar-button-text-active-hover: #000000;
-  --tv-color-item-active-text: rgb(6, 255, 6);
+  --tv-color-item-active-text: #3772FF;
   --tv-color-toolbar-toggle-button-background-active: rgb(0, 0, 0);
   --tv-color-toolbar-toggle-button-background-active-hover: rgb(0, 0, 0);
+  --tv-toolbar-explicit-hover-border-radius: 0px;
 }
 
 * {
