Fix webpack issues

--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,5 @@
-p, div {
+p,
+div {
     margin: 0;
     padding: 0;
 }
@@ -7,22 +8,28 @@ p, div {
     font-family: 'DMSans-Bold';
     src: url(./assets/fonts/DMSans-Bold.ttf);
 }
+
 @font-face {
     font-family: 'DMSans-BoldItalic';
     src: url(./assets/fonts/DMSans-BoldItalic.ttf);
 }
+
 @font-face {
     font-family: 'DMSans-Italic';
     src: url(./assets/fonts/DMSans-Italic.ttf);
 }
+
 @font-face {
     font-family: 'DMSans-Medium';
     src: url(./assets/fonts/DMSans-Medium.ttf);
 }
+
 @font-face {
     font-family: 'DMSans-MediumItalic';
     src: url(./assets/fonts//DMSans-MediumItalic.ttf);
-}@font-face {
+}
+
+@font-face {
     font-family: 'DMSans-Regular';
     src: url(./assets/fonts/DMSans-Regular.ttf);
 }
