--- a/src/components/Chatbox/chatbubble.css
+++ b/src/components/Chatbox/chatbubble.css
@@ -13,3 +13,15 @@
     transform: rotate(360deg);
   }
 }
+
+@media only screen and (min-width: 601px) {
+  .logs {
+    padding-right: 0;
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  .logs {
+    padding-right: 5px;
+  }
+}
